<?xml version="1.0"?>
<package format="2">
  <name>co2_sensor_driver</name>
  <version>0.0.0</version>
  <description>The co2_sensor_driver package</description>

  <maintainer email="tiryoh@gmail.com">Tiryoh</maintainer>
  <author email="tiryoh@gmail.com">Tiryoh</author>

  <license>MIT</license>

  <url type="website">https://github.com/Tiryoh/co2_sensor_driver_ros/wiki</url>
  <url type="repository">https://github.com/Tiryoh/co2_sensor_driver_ros</url>
  <url type="bugtracker">https://github.com/Tiryoh/co2_sensor_driver_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
